--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,8 +1,11 @@
 !!! 5
 %html
   %head
+    %title
+      = yield(:title) || APPLICATION_TITLE
     = csrf_meta_tag
     = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag 'map.css', :media => 'screen, projection'
     = stylesheet_link_tag 'print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'ie.css', :media => 'screen, projection'
@@ -12,5 +15,6 @@
     = javascript_include_tag 'application.js'
     = javascript_include_tag 'http://www.openlayers.org/dev/OpenLayers.js'
     = javascript_include_tag 'http://svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-combined.js'
-  %body
+    = yield(:head)
+  %body.bp
     = yield
