--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,60 +1,59 @@
 // This import applies a global reset to any page that imports this stylesheet.
-@import "blueprint/reset";
+@import blueprint/reset
 
 // To configure blueprint, edit the partials/base.sass file.
-@import "partials/base";
+@import partials/base
 
 // Import all the default blueprint modules so that we can access their mixins.
-@import "blueprint";
+@import blueprint
 
 // Import the non-default scaffolding module.
-@import "blueprint/scaffolding";
+@import blueprint/scaffolding
 
 // To generate css equivalent to the blueprint css but with your
 // configuration applied, uncomment:
 // @include blueprint
+@import compass/css3.sass
 
 // But Compass recommends that you scope your blueprint styles
 // So that you can better control what pages use blueprint
 // when stylesheets are concatenated together.
-@include blueprint-scaffolding("body.bp");
++blueprint-scaffolding("body.bp")
 
-body.bp {
-  @include blueprint-typography(true);
-  @include blueprint-utilities;
-  @include blueprint-debug;
-  @include blueprint-interaction;
+body.bp
+  +blueprint-typography(true)
+  +blueprint-utilities
+  +blueprint-debug
+  +blueprint-interaction
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
-  margin: 20px;
-  
-  #container {
-    @include container; }
-  
-  #footer{
-    padding: 10px;
-    text-align: center;
-    font-size: 0.8em;
-    a {color: gray;}
-  }
-}
-
-form.bp {
-  @include blueprint-form; }
+  margin: 20px
+  #container
+    +container
+  #footer
+    padding: 10px
+    text-align: center
+    font-size: 0.8em
+    a
+      color: gray
+  #download_form
+    display: none
+form.bp
+  +blueprint-form
 
 // Page layout can be done using mixins applied to your semantic classes and IDs:
-body.two-col {
-  #container {
-    @include container; }
-  #header, #footer {
-    @include column($blueprint-grid-columns); }
-  #sidebar {
+body.two-col
+  #container
+    +container
+  #header, #footer
+    +column($blueprint-grid-columns)
+  #sidebar
     // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3);
-    @include column($sidebar-columns); }
-  #content {
+    $sidebar-columns: floor($blueprint-grid-columns / 3)
+    +column($sidebar-columns)
+  #content
     // Two thirds of the grid columns, rounding up.
     // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3);
+    $content-columns: ceil(2 * $blueprint-grid-columns / 3)
     // true means it's the last column in the row
-    @include column($content-columns, true); } }
+    +column($content-columns, true)
