--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -10,6 +10,11 @@
 :javascript
   $(document).ready(function(){
     init_home_index_map();
+    $("a.download_data").click(function(){
+        $('#download_form').show();
+        return false;
+    });
+    
   });
   
 
@@ -24,6 +29,13 @@
   
   #map
   #projected_coords
+  #download_data
+    =link_to "Download Data", '#'
+  #download_form
+    %input{:name => "email", :type => "text", :value => "Please type your email here for notification"}
+    %input{:name => "subscribe", :type => "submit", :value => "Download"}
+  #legend 
+    %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
 
   #footer.bp
     %a{:href => "http://www.aifdr.org/public"} AIFDR
