--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,8 +1,6 @@
 =content_for(:head) do
-  %link{:href => "/geoserver/style.css", :rel => "stylesheet", :type => "text/css"}/
-  %link{:href => "openlayers/theme/default/style.css", :rel => "stylesheet", :type => "text/css"}/
   %script{:src => "http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2&mkt=en-us"}
-  %script{:src => "http://api.maps.yahoo.com/ajaxymap?v=3.0&appid=euzuro-openlayers"}
+  / %script{:src => "http://api.maps.yahoo.com/ajaxymap?v=3.0&appid=euzuro-openlayers"}
   %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
   = javascript_include_tag 'home_index_map.js'
   
@@ -10,18 +8,13 @@
 :javascript
   $(document).ready(function(){
     init_home_index_map();
-    $("#download_data").click(function(){
-        $('#download_form').show();
-        return false;
-    });
-    
   });
   
 
 
 #container
 
-  %h3 
+  %h2 
     Indonesian Hazard Impact Tool (IHIT) or Indonesian Risk Assessment Tool (IRAT) or Indonesian Risk Assessment Guidelines (IRAG)
 
   %p
@@ -29,10 +22,12 @@
   
   #map
   #projected_coords
-  #download_data=link_to "Download Data", '#'
-  #download_form
-    %input{:name => "email", :type => "text", :value => "Please type your email here for notification"}
-    %input{:name => "subscribe", :type => "submit", :value => "Download"}
+  #download
+    %p Download Data
+    %input{:type => "text", :name => "email", :value => "Please type your email here for notification", :size => 50}
+    %input{:type => "submit", :name => "subscribe", :value => "Download"}
+
+
   #legend 
     %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
 
