--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -27,4 +27,9 @@
       });    
     = yield(:head)
   %body.bp
+    #header
+      #header_content
+        %h2 
+          Rapid Impact Assessment Tool (RIAT)
+
     = yield
