--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -21,7 +21,7 @@ body.bp hr.space { background: #dddddd; color: #dddddd; clear: both; float: none
 body.bp form.inline { line-height: 3; }
 body.bp form.inline p { margin-bottom: 0; }
 
-@font-face { font-family: "FontinSansCyrillic"; src: local("☺"), url(/fonts/FontinSans_Cyrillic_B_46b.otf) format('opentype'); }
+@font-face { font-family: "FontinSansCyrillic"; src: local("FontinSansCyrillic"), url(/fonts/FontinSans_Cyrillic_B_46b.otf) format('opentype'); }
 
 body.bp { line-height: 1.5; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; color: #333333; font-size: 100%; -webkit-font-smoothing: antialiased; }
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 { font-weight: normal; color: #222222; }
@@ -68,7 +68,8 @@ body.bp .quiet { color: #666666; }
 body.bp .loud { color: #111111; }
 body.bp .clear { clear: both; }
 body.bp .nowrap { white-space: nowrap; }
-body.bp .clearfix { overflow: hidden; *zoom: 1; }
+body.bp .clearfix { overflow: hidden; display: inline-block; }
+body.bp .clearfix { display: block; }
 body.bp .small { font-size: 0.8em; margin-bottom: 1.875em; line-height: 1.875em; }
 body.bp .large { font-size: 1.2em; line-height: 2.5em; margin-bottom: 1.25em; }
 body.bp .first { margin-left: 0; padding-left: 0; }
@@ -87,13 +88,16 @@ body.bp .highlight { background: yellow; }
 body.bp .added { background: #006600; color: white; }
 body.bp .removed { background: #990000; color: white; }
 body.bp #header { margin-bottom: 10px; background: #aa0000; }
-body.bp #header #header_content { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; padding-top: 16px; }
+body.bp #header #header_content { width: 920px; margin: 0 auto; overflow: hidden; display: inline-block; padding-top: 16px; }
+body.bp #header #header_content { display: block; }
 body.bp #header #header_content h2 { text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; color: white; font-family: FontinSansCyrillic; text-align: center; font-size: 40px; letter-spacing: -0.03em; }
 body.bp .pagehead { position: relative; margin-top: -30px; margin-left: auto; margin-right: auto; width: 920px; padding: 20px 25px 0 25px; background: url(/images/pagehead/background-white.png) 0 0 no-repeat; }
-body.bp .container { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; }
+body.bp .container { width: 920px; margin: 0 auto; overflow: hidden; display: inline-block; }
+body.bp .container { display: block; }
 body.bp #footer { padding: 10px; font-size: 0.8em; background: none repeat scroll 0 0 #aa0000; border-top: 3px solid #cccccc; clear: both; color: #888888; margin-top: 30px; padding: 20px 0; }
 body.bp #footer a { color: white; }
-body.bp #footer #footer_content { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; }
+body.bp #footer #footer_content { width: 920px; margin: 0 auto; overflow: hidden; display: inline-block; }
+body.bp #footer #footer_content { display: block; }
 body.bp #footer #footer_content ul { list-style: none; padding-left: 0; }
 body.bp #footer #footer_content #footer_left { display: inline; float: left; margin-right: 10px; width: 455px; }
 * html body.bp #footer #footer_content #footer_left { overflow-x: hidden; }
@@ -106,18 +110,19 @@ body.bp a:hover, body.bp a:focus { color: #aa0000; }
 form.bp label { font-weight: bold; }
 form.bp fieldset { padding: 1.4em; margin: 0 0 1.5em 0; }
 form.bp legend { font-weight: bold; font-size: 1.2em; }
-form.bp input.text, form.bp input.title, form.bp input[type=email], form.bp input[type=text], form.bp input[type=password] { margin: 0.5em 0; background-color: white; padding: 5px; }
+form.bp input.text, form.bp input.title, form.bp input[type=text], form.bp input[type=password] { margin: 0.5em 0; background-color: white; padding: 5px; }
 form.bp input.title { font-size: 1.5em; }
 form.bp input[type=checkbox], form.bp input.checkbox, form.bp input[type=radio], form.bp input.radio { position: relative; top: 0.25em; }
 form.bp textarea { margin: 0.5em 0; padding: 5px; }
 form.bp select { margin: 0.5em 0; }
 form.bp fieldset { border: 1px solid #cccccc; }
-form.bp input.text, form.bp input.title, form.bp input[type=email], form.bp input[type=text], form.bp input[type=password], form.bp textarea, form.bp select { border: 1px solid #bbbbbb; }
-form.bp input.text:focus, form.bp input.title:focus, form.bp input[type=email]:focus, form.bp input[type=text]:focus, form.bp input[type=password]:focus, form.bp textarea:focus, form.bp select:focus { border: 1px solid #666666; }
-form.bp input.text, form.bp input.title, form.bp input[type=email], form.bp input[type=text], form.bp input[type=password] { width: 300px; }
+form.bp input.text, form.bp input.title, form.bp input[type=text], form.bp input[type=password], form.bp textarea, form.bp select { border: 1px solid #bbbbbb; }
+form.bp input.text:focus, form.bp input.title:focus, form.bp input[type=text]:focus, form.bp input[type=password]:focus, form.bp textarea:focus, form.bp select:focus { border: 1px solid #666666; }
+form.bp input.text, form.bp input.title, form.bp input[type=text], form.bp input[type=password] { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
-body.two-col #container { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; }
+body.two-col #container { width: 920px; margin: 0 auto; overflow: hidden; display: inline-block; }
+body.two-col #container { display: block; }
 body.two-col #header, body.two-col #footer { display: inline; float: left; margin-right: 10px; width: 920px; }
 * html body.two-col #header, * html body.two-col #footer { overflow-x: hidden; }
 body.two-col #sidebar { display: inline; float: left; margin-right: 10px; width: 300px; }
@@ -125,7 +130,8 @@ body.two-col #sidebar { display: inline; float: left; margin-right: 10px; width:
 body.two-col .container { display: inline; float: left; margin-right: 0; width: 610px; }
 * html body.two-col .container { overflow-x: hidden; }
 
-#builder { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; border-top: 1px #cccccc dashed; font-size: 14px; }
+#builder { width: 920px; margin: 0 auto; overflow: hidden; display: inline-block; border-top: 1px #cccccc dashed; font-size: 14px; }
+#builder { display: block; }
 #builder .map, #builder .hazard, #builder .exposure { display: inline; float: left; margin-right: 10px; width: 222.5px; min-height: 130px; _height: 130px; padding-top: 15px; }
 * html #builder .map, * html #builder .hazard, * html #builder .exposure { overflow-x: hidden; }
 #builder .map h2, #builder .map p, #builder .hazard h2, #builder .hazard p, #builder .exposure h2, #builder .exposure p { margin-right: 10px; }
@@ -139,8 +145,10 @@ body.two-col .container { display: inline; float: left; margin-right: 0; width: 
 #builder select { border: 1px solid #cccccc; color: #333333; display: block; font: normal 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; padding: 5px 3px 5px; margin: 5px 0 15px; height: 2.1em; position: relative; }
 #builder select:focus { border-color: black; }
 #builder .map, #builder .hazard, #builder .exposure { border-right: 1px #cccccc dashed; }
-#builder .results, #builder .loading { display: none; overflow: hidden; *zoom: 1; clear: both; border-top: 1px #cccccc dashed; padding: 15px 0; }
-#builder .results .links, #builder .loading .links { overflow: hidden; *zoom: 1; }
+#builder .results, #builder .loading { display: none; overflow: hidden; display: inline-block; clear: both; border-top: 1px #cccccc dashed; padding: 15px 0; }
+#builder .results, #builder .loading { display: block; }
+#builder .results .links, #builder .loading .links { overflow: hidden; display: inline-block; }
+#builder .results .links, #builder .loading .links { display: block; }
 #builder .results .links a, #builder .loading .links a { padding: 8px 0 8px 40px; float: left; margin: 0 20px 0 0; }
 #builder .results .links .ge, #builder .loading .links .ge { background: transparent url(../images/Google-Earth-32.png) no-repeat left center; }
 #builder .loading { padding-left: 15px; padding-right: 15px; }
