updated deployment script to check for dependencies

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -13,11 +13,12 @@
   
 
 
-#container
+.pagehead
+  %p
+    The Hazard Impact Tool allows rapid impact assessments at the district level for a range of hazards and scenarios. Select the hazard and the scenario and the tool will provide estimates of people impacted in each district.
 
+#container
   #content
-    %p
-      The Hazard Impact Tool allows rapid impact assessments at the district level for a range of hazards and scenarios. Select the hazard and the scenario and the tool will provide estimates of people impacted in each district.
   
     #map
     #projected_coords
