--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -34,9 +34,17 @@ body.bp
     #header_content
       +container
 
+  .pagehead
+    position: relative
+    margin-top: -30px
+    margin-left: auto
+    margin-right: auto
+    width: 920px
+    padding: 20px 25px 10px 25px
+    background: url(/images/pagehead/background-white.png) 0 0 no-repeat
+
   #container
-    +container
-    
+    +container    
     #map
       +border-radius(4px)
       
