--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -27,8 +27,6 @@
       %input{:type => "text", :name => "email", :value => "Please type your email here for notification", :size => 50}
       %input{:type => "submit", :name => "subscribe", :value => "Download"}
 
-    #legend 
-      %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
+    / #legend 
+    /   %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
 
-  #footer.bp
-    %a{:href => "http://www.aifdr.org/public"} AIFDR
