--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -34,3 +34,23 @@
           Rapid Impact Assessment Tool (RIAT)
 
     = yield
+
+    #footer.bp
+      #footer_content
+        #footer_left
+          %ul
+            %li 
+              %a{:href => "http://www.aifdr.org/public"} AIFDR
+            %li 
+              %a{:href => "/static/about"} About
+            %li 
+              %a{:href => "/static/contact"} Contact
+        #footer_right
+          %ul
+            %li 
+              %a{:href => "/static/docs"} Documentation
+            %li 
+              %a{:href => "/static/api"} About
+            %li 
+              %a{:href => "/static/contribute"} Contribute
+          
