added python script to call the model

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -19,6 +19,11 @@
 
 #container
   #content
+    %div=link_to "1 Select Hazard", "#"
+    
+    %div=link_to "2 Select Exposure", "#"
+    
+    %div=link_to "3 View Impact", "#"
   
     #map
     #projected_coords
