added working websocket

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,6 +19,7 @@
 
     / install uniform for nicer forms
     = javascript_include_tag 'jquery.uniform.min', :cache => true
+    = javascript_include_tag "highcharts", :cache => true
     = stylesheet_link_tag '/javascripts/css/uniform.default.css', :cache => true
     
     :javascript
