--- a/app/views/sample.haml
+++ b/app/views/sample.haml
@@ -1,30 +1,21 @@
-<!--
-  Lincense: Public Domain
--->
-
-<html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Sample of web_socket.js</title>
-  
-  <!-- Include these three JS files: -->
-  <script type="text/javascript" src="/javascripts/web-socket-js/swfobject.js"></script>
-  <script type="text/javascript" src="/javascripts/web-socket-js/FABridge.js"></script>
-  <script type="text/javascript" src="/javascripts/web-socket-js/web_socket.js"></script>
-
-  <script type="text/javascript">
-    
+=content_for(:head) do
+  %script{:src => "/javascripts/web-socket-js/swfobject.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/web-socket-js/FABridge.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/web-socket-js/web_socket.js", :type => "text/javascript"}
+  = puts WEBSOCKET_SERVER_CONFIG
+  :javascript
     // Set URL of your WebSocketMain.swf here:
     WEB_SOCKET_SWF_LOCATION = "/javascripts/web-socket-js/WebSocketMain.swf";
     // Set this to dump debug message from Flash to console.log:
     WEB_SOCKET_DEBUG = true;
 
     var ws;
-    
+  
     function init() {
 
       // Connect to Web Socket.
       // Change host/port here to your own Web Socket server.
-      ws = new WebSocket("ws://localhost:5000/");
+      ws = new WebSocket("ws://#{WEBSOCKET_SERVER_CONFIG["host"]}:#{WEBSOCKET_SERVER_CONFIG["port"]}/");
 
       // Set event handlers.
       ws.onopen = function() {
@@ -42,7 +33,7 @@
       };
 
     }
-    
+  
     function onSubmit() {
       var input = document.getElementById("input");
       // You can send message to the Web Socket using ws.send.
@@ -51,24 +42,25 @@
       input.value = "";
       input.focus();
     }
-    
+  
     function onCloseClick() {
       ws.close();
     }
-    
+  
     function output(str) {
       var log = document.getElementById("log");
       var escaped = str.replace(/&/, "&amp;").replace(/</, "&lt;").
         replace(/>/, "&gt;").replace(/"/, "&quot;"); // "
       log.innerHTML = escaped + "<br>" + log.innerHTML;
     }
-
-  </script>
-</head><body onload="init();">
-  <form onsubmit="onSubmit(); return false;">
-    <input type="text" id="input">
-    <input type="submit" value="Send">
-    <button onclick="onCloseClick(); return false;">close</button>
-  </form>
-  <div id="log"></div>
-</body></html>
+    
+    $('document').ready(function () {
+      init();
+    })
+#container
+  #content
+    %form{:onsubmit => "onSubmit(); return false;"}
+      %input#input{:type => "text"}/
+      %input{:type => "submit", :value => "Send"}/
+      %button{:onclick => "onCloseClick(); return false;"} close
+    #log
