--- a/app/views/sample.haml
+++ b/app/views/sample.haml
@@ -38,7 +38,7 @@
       var input = document.getElementById("input");
       // You can send message to the Web Socket using ws.send.
       ws.send(input.value);
-      output("send: " + input.value);
+      output("Impact analysis started");
       input.value = "";
       input.focus();
     }
