--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -23,6 +23,8 @@
 // when stylesheets are concatenated together.
 +blueprint-scaffolding("body.bp")
 
+@include font-face("FontinSansCyrillic", font-files("/fonts/FontinSans_Cyrillic_B_46b.otf", opentype))
+
 body.bp
   +blueprint-typography(true)
   +blueprint-utilities
@@ -36,6 +38,11 @@ body.bp
     background: #fcfcfc url(/images/header/header_bg.gif) 0 100% repeat-x
     #header_content
       +container
+      padding-top: 10px
+      h2
+        +text-shadow
+        color: #600
+        font-family: FontinSansCyrillic
 
   .pagehead
     position: relative
@@ -64,8 +71,6 @@ body.bp
       color: #999
     #footer_content
       +container
-      ul.pretty
-        +pretty-bullets("Right-arrow-12.png", 12px, 12px)
       ul.nobullets
         +no-bullets
       
