--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,12 +9,12 @@
     = stylesheet_link_tag 'print.css',  :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'ie.css',   :media => 'screen, projection'
-
+      
     = javascript_include_tag 'jquery.min',      :cache => true
     = javascript_include_tag 'application.js',  :cache => true
-    = javascript_include_tag 'http://www.openlayers.org/dev/OpenLayers.js', :cache => true
-    = javascript_include_tag 'http://svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-combined.js', :cache => true
-    %link{ :href=>"http://www.openlayers.org/dev/theme/default/style.css", :media=>"screen", :rel=>"stylesheet", :type=>"text/css"}
+    = javascript_include_tag 'openlayers/OpenLayers', :cache => true
+    = javascript_include_tag 'proj4js-combined', :cache => true
+    %link{ :href=>"/javascripts/openlayers/theme/default/style.css", :media=>"screen", :rel=>"stylesheet", :type=>"text/css"}
 
     / install uniform for nicer forms
     = javascript_include_tag "highcharts", :cache => true
