--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,7 +31,7 @@
     #header
       #header_content
         %h2 
-          Rapid Impact Assessment Tool (RIAT)
+          Rapid Impact Assessment Tool
 
     = yield
 
