--- a/app/stylesheets/map.sass
+++ b/app/stylesheets/map.sass
@@ -1,6 +1,8 @@
-#map
+#map-container
   height: 400px
-  border: 5px solid gray
+  border: 1px solid #ccc
+  margin: 0 10px 10px
+  min-width: 920px
 
 .olControlMousePosition 
   background-color: #333
