--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -13,18 +13,53 @@
     a range of hazards and scenarios. Select the hazard and the scenario and the tool
     will provide estimates of people impacted in each district.
 
-#container
-  #content
-    =render :partial => "home/scrollable"  
-    #map
-    #projected_coords
-    #download
-      %p Download Data
-      %input{:type => "text", :name => "email", :value => "Please type your email here for notification", :size => 50}
-      %input{:type => "submit", :name => "subscribe", :value => "Download"}
+.container
+  // =render :partial => "home/scrollable"
+  
+  #builder
+    .map
+      %h2 Choose an area
+      %p Set the map below to the bounding box you want
+    .hazard
+      %h2 Select natural hazard
+      %select
+        %option{:value => "earthquake", :selected => "selected"} Earthquake
+        %option{:value => "volcanic eruption"} Volcanic Eruption
+        %option{:value => "flood"} Flood
+      %p.help
+        I am some helpful text about what natural hazard means
+    .exposure
+      %h2 Select exposure
+      %select
+        %option{:value => "Population", :selected => "selected"} Population
+        %option{:value => "infrastructure"} Infrastructure
+      %p.help
+        I am some helpful text about what exposure means
+    .action
+      %button{:type => 'submit'} Run simulation
+      // %button.disabled{:type => 'submit'} Run simulation
+    .loading
+      %img{:src => '/images/spinner.gif'}
+      %p Running simulation
+    .results
+      %h2 Impact results
+      %p Created at 15 July 2010, 1:31 PM
+      .links
+        %a.download{:href => '#'} Download results
+        %a.ge{:href => '#'} View impact in Google Earth
 
-    / #legend 
-    /   %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
+#map-container
+  #map
+
+// .container
+//   #projected_coords
+//   #download
+//     %p Download Data
+//     %input{:type => "text", :name => "email", :value => "Please type your email here for notification", :size => 50}
+//     %input{:type => "submit", :name => "subscribe", :value => "Download"}
+// 
+//   / #legend 
+//   /   %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
 
 :javascript
   $(document).ready(function(){
