--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
       = stylesheet_link_tag 'ie.css',   :media => 'screen, projection'
       
     = javascript_include_tag 'jquery.min',      :cache => true
-    = javascript_include_tag 'application.js',  :cache => true
+    = javascript_include_tag 'application',  :cache => true
     = javascript_include_tag 'openlayers/OpenLayers', :cache => true
     = javascript_include_tag 'proj4js-combined', :cache => true
     %link{ :href=>"/javascripts/openlayers/theme/default/style.css", :media=>"screen", :rel=>"stylesheet", :type=>"text/css"}
