--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -24,15 +24,15 @@
     .hazard
       %h2 Select natural hazard
       %select
-        =Hazard.layernames.each do |h| 
-          %option{:value => "#{h}", :selected => "selected"}=h
+        =Hazard.layernames.each do |hz| 
+          %option{:value => "#{hz}", :selected => "selected"}=hz.humanize
       %p.help
         I am some helpful text about what natural hazard means
     .exposure
       %h2 Select exposure
       %select
         =Exposure.layernames.each do |e| 
-          %option{:value => "#{e}", :selected => "selected"}=e
+          %option{:value => "#{e}", :selected => "selected"}=e.humanize
       %p.help
         I am some helpful text about what exposure means
     .action
@@ -64,4 +64,47 @@
 :javascript
   $(document).ready(function(){
     init_home_index_map();
+    init_websocket();
   });
+  
+  $('button').click(function() {
+    $(this).addClass("disabled");
+    $('.loading').show();
+  })
+
+=content_for(:head) do
+  %script{:src => "/javascripts/web-socket-js/swfobject.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/web-socket-js/FABridge.js", :type => "text/javascript"}
+  %script{:src => "/javascripts/web-socket-js/web_socket.js", :type => "text/javascript"}
+  = puts WEBSOCKET_SERVER_CONFIG
+  :javascript
+    // Set URL of your WebSocketMain.swf here:
+    WEB_SOCKET_SWF_LOCATION = "/javascripts/web-socket-js/WebSocketMain.swf";
+    // Set this to dump debug message from Flash to console.log:
+    WEB_SOCKET_DEBUG = true;
+    var ws;
+  
+    function init_websocket() {
+
+      // Connect to Web Socket.
+      // Change host/port here to your own Web Socket server.
+      ws = new WebSocket("ws://#{WEBSOCKET_SERVER_CONFIG["host"]}:#{WEBSOCKET_SERVER_CONFIG["port"]}/");
+
+      // Set event handlers.
+      ws.onopen = function() {
+        console.log("onopen");
+      };
+      ws.onmessage = function(e) {
+        // e.data contains received string.
+        // $("#status").hide('fast');
+        // $("#impact_form").show('fast');
+        console.log(e.data);
+      };
+      ws.onclose = function() {
+        console.log("onclose");
+      };
+      ws.onerror = function() {
+        console.log("onerror");
+      };
+
+    }
