removed js cache

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -3,8 +3,8 @@
   / %script{:src => "http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2&mkt=en-us"}
   %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
   = javascript_include_tag 'home_index_map.js'
-  = stylesheet_link_tag "scrollable", :cache => true
-  = javascript_include_tag "jquery.tools.min", :cache => true
+  = stylesheet_link_tag "scrollable"
+  = javascript_include_tag "jquery.tools.min"
 
 .pagehead
   %p
