removed cache and default select

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,8 +10,8 @@
     /[if lt IE 8]
       = stylesheet_link_tag 'ie.css',   :media => 'screen, projection'
       
-    = javascript_include_tag 'jquery.min',      :cache => true
-    = javascript_include_tag 'application',  :cache => true
+    = javascript_include_tag 'jquery.min'
+    = javascript_include_tag 'application'
     = javascript_include_tag 'openlayers/OpenLayers'
     = javascript_include_tag 'proj4js-combined'
     %link{ :href=>"/javascripts/openlayers/theme/default/style.css", :media=>"screen", :rel=>"stylesheet", :type=>"text/css"}
