--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -25,14 +25,14 @@
       %h2 Select natural hazard
       %select
         =Hazard.layernames.each do |hz| 
-          %option{:value => "#{hz}", :selected => "selected"}=hz.humanize
+          %option{:value => "#{hz}"}=hz.humanize
       %p.help
         I am some helpful text about what natural hazard means
     .exposure
       %h2 Select exposure
       %select
         =Exposure.layernames.each do |e| 
-          %option{:value => "#{e}", :selected => "selected"}=e.humanize
+          %option{:value => "#{e}"}=e.humanize
       %p.help
         I am some helpful text about what exposure means
     .action
