--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -2,9 +2,7 @@
   / %script{:src => "http://api.maps.yahoo.com/ajaxymap?v=3.0&appid=euzuro-openlayers"}
   / %script{:src => "http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2&mkt=en-us"}
   %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
-  = javascript_include_tag 'home_index_map.js'
-  = stylesheet_link_tag "scrollable"
-  = javascript_include_tag "jquery.tools.min"
+  = javascript_include_tag 'home_index_map'
 
 .pagehead
   %p
@@ -12,9 +10,7 @@
     a range of hazards and scenarios. Select the hazard and the scenario and the tool
     will provide estimates of people impacted in each district.
 
-.container
-  // =render :partial => "home/scrollable"
-  
+.container  
   #builder
     .map
       %h2 Choose an area
@@ -43,68 +39,64 @@
       %p Running simulation
     .results
       %h2 Impact results
-      %p Created at 15 July 2010, 1:31 PM
+      %p.timestamp Created at 15 July 2010, 1:31 PM
       .links
         %a.download{:href => '#'} Download results
         %a.ge{:href => '#'} View impact in Google Earth
 
 #map-container
 
-
-// .container
-//   #projected_coords
-//   #download
-//     %p Download Data
-//     %input{:type => "text", :name => "email", :value => "Please type your email here for notification", :size => 50}
-//     %input{:type => "submit", :name => "subscribe", :value => "Download"}
-// 
-//   / #legend 
-//   /   %image{:src => "http://www.aifdr.org:8080/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=100&HEIGHT=20&LAYER=test:mmi_intensity_10pc50&LEGEND_OPTIONS=forceRule:True"}
-
 :javascript
+
+  // Set URL of your WebSocketMain.swf here:
+  WEB_SOCKET_SWF_LOCATION = "/javascripts/web-socket-js/WebSocketMain.swf";
+  // Set this to dump debug message from Flash to console.log:
+  WEB_SOCKET_DEBUG = true;
+  var ws;
+
+  function init_websocket() {
+    // Connect to Web Socket.
+    // Change host/port here to your own Web Socket server.
+    ws = new WebSocket("ws://#{WEBSOCKET_SERVER_CONFIG["host"]}:#{WEBSOCKET_SERVER_CONFIG["port"]}/");
+
+    // Set event handlers.
+    ws.onopen = function() {
+      console.log("onopen");
+    };
+    ws.onmessage = function(e) {
+      // e.data contains received string.      
+      results = JSON.parse(e.data);
+      if (results.impact != null) {
+        $('.results p.timestamp').html(results.timestamp);
+        $('.results .links a.ge').attr('href', results.kml);
+        $('.loading').hide();    
+        $('.results').show();
+      };
+      console.log(e.data);
+    };
+    ws.onclose = function() {
+      console.log("onclose");
+    };
+    ws.onerror = function() {
+      console.log("onerror");
+    };
+  }
+
   $(document).ready(function(){
     init_home_index_map();
     init_websocket();
   });
-  
+
   $('button').click(function() {
     $(this).addClass("disabled");
     $('.loading').show();
+    Riat.hazard = $('.hazard select').val();
+    Riat.exposure = $('.exposure select').val();
+    console.log(Riat.bounding_box + "\n" + Riat.hazard + "\n" + Riat.exposure);
+    encoded_riat = JSON.stringify(Riat);
+    console.log(encoded_riat);
+    ws.send(encoded_riat);
   })
 
-=content_for(:head) do
-  %script{:src => "/javascripts/web-socket-js/swfobject.js", :type => "text/javascript"}
-  %script{:src => "/javascripts/web-socket-js/FABridge.js", :type => "text/javascript"}
-  %script{:src => "/javascripts/web-socket-js/web_socket.js", :type => "text/javascript"}
-  = puts WEBSOCKET_SERVER_CONFIG
-  :javascript
-    // Set URL of your WebSocketMain.swf here:
-    WEB_SOCKET_SWF_LOCATION = "/javascripts/web-socket-js/WebSocketMain.swf";
-    // Set this to dump debug message from Flash to console.log:
-    WEB_SOCKET_DEBUG = true;
-    var ws;
-  
-    function init_websocket() {
 
-      // Connect to Web Socket.
-      // Change host/port here to your own Web Socket server.
-      ws = new WebSocket("ws://#{WEBSOCKET_SERVER_CONFIG["host"]}:#{WEBSOCKET_SERVER_CONFIG["port"]}/");
 
-      // Set event handlers.
-      ws.onopen = function() {
-        console.log("onopen");
-      };
-      ws.onmessage = function(e) {
-        // e.data contains received string.
-        // $("#status").hide('fast');
-        // $("#impact_form").show('fast');
-        console.log(e.data);
-      };
-      ws.onclose = function() {
-        console.log("onclose");
-      };
-      ws.onerror = function() {
-        console.log("onerror");
-      };
-
-    }
