fixed the display issue

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -158,8 +158,9 @@ body.two-col
       border-color: #000
   .map, .hazard, .exposure
     border-right: 1px #ccc dashed
+
   .results, .loading
-    display: none
+    display: none    
     +clearfix
     clear: both
     border-top: 1px #ccc dashed
@@ -172,8 +173,9 @@ body.two-col
         margin: 0 20px 0 0
       .ge
         background: transparent url(../images/Google-Earth-32.png) no-repeat left center
-      
+        
   .loading
+    display: none        
     padding-left: 15px
     padding-right: 15px
     img
@@ -183,8 +185,6 @@ body.two-col
       float: left
       margin: 0
       font-size: 24px
-    
-    
-    
-    
-    
+
+  .results
+    display: none
