--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,7 +20,7 @@
     = javascript_include_tag "highcharts"
     = javascript_include_tag 'jquery.uniform.min'
     = javascript_include_tag 'json'
-
+    = javascript_include_tag 'inflection'
     = stylesheet_link_tag '/javascripts/css/uniform.default.css'
 
     / setup websocket includes
